<resources>
    <string name="app_name">CGPA-Calculator</string>
    <string-array name="inst_category">
        <item>University</item>
        <item>Polytechnic</item>
        <item>College of Education</item>
    </string-array>
    <string name="title_activity_landing_page">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_about">About</string>
    <string name="title_gpa">GPA</string>
    <string name="title_cgpa">CGPA</string>
    <string name="title_final_result">Final Result</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>