<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/about_icon"
        android:title="@string/title_about" />

    <item
        android:id="@+id/navigation_gpa"
        android:icon="@drawable/gpa_icon"
        android:title="@string/title_gpa" />

    <item
        android:id="@+id/navigation_cgpa"
        android:icon="@drawable/cgpa_icon"
        android:title="@string/title_cgpa" />

    <item
        android:id="@+id/finalResult"
        android:icon="@drawable/final_icon"
        android:title="@string/title_final_result" />



</menu>